:bug: Fix dark mode CSS checkbox

--- a/src/scss/options.scss
+++ b/src/scss/options.scss
@@ -12,8 +12,11 @@ body {
 
   @media (prefers-color-scheme: dark) {
     * {
-      &:not(.dropdown) {
-        @apply text-white;
+      & {
+        :not(.dropdown)
+        :not(.form-checkbox) {
+          @apply text-white;
+        }
       }
     }
     background-color: #000;
